[package]
name = "cllm"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
llm-chain = "0.13.0"
llm-chain-openai = "0.13.0"
serde_json = "1.0"
dirs = "5.0"
spinners = "4.1.1"
cli-clipboard = "0.4.0"
