[tool.poetry]
name = "cllm"
version = "0.1.0"
description = "Empower your CLI experience with a command search tool driven by LLM magic!"
authors = ["chanism <ykdy3951@naver.com>", "devleejb <devleejb@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
cllm = "cllm.main:app"

[tool.poetry.dependencies]
python = "^3.10.9"
typer = {extras = ["all"], version = "^0.9.0"}
langchain-openai = "^0.0.5"
langchain-core = "^0.1.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
